worked on notifications. pressing notif now leads you to a window to view/edit the notif corrisponding to the note

--- a/app/src/main/res/layout/activity_edit_note.xml
+++ b/app/src/main/res/layout/activity_edit_note.xml
@@ -71,6 +71,7 @@
         android:id="@+id/textView_alarmDate"
         android:layout_alignBottom="@+id/button_addReminder"
         android:layout_alignTop="@+id/button_addReminder"
+        android:layout_marginTop="9dp"
         android:layout_toRightOf="@+id/button_addReminder"
         />
 
